[package]
name = "questdb"
description = "Connector for questdb"
repository = "https://github.com/solanav/questdb-rs"
version = "0.1.2"
authors = ["solanav <solanav@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["questdb", "db", "connector"]
categories = ["database"]
documentation = "https://docs.rs/questdb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "blocking", "multipart"] }
tokio = { version = "1.42.0", features = ["macros"] }
url = "2.5.4"

